--- a/.issuestatus/manifest.json
+++ b/.issuestatus/manifest.json
@@ -1,6 +1,5 @@
 {
-  "short_name": "Issue Status",
-  "name": "Simple, modern and flexible status page",
+  "short_name": "Redpanda Status",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,7 +17,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://tadhglewis.github.io/issue-status",
+  "start_url": "https://redpanda-data.github.io/issue-status",
   "display": "standalone",
   "theme_color": "#3da751"
 }
